2017_spring_session/scripts/infrastructure.yml
---
apiVersion: "v1"
kind: "List"
items:
- apiVersion: v1
  kind: DeploymentConfig
  metadata:
    labels:
      cluster: "old"
    name: transactions-repository
  spec:
    replicas: 3
    strategy:
      type: Rolling
      rollingParams:
        updatePeriodSeconds: 10
        intervalSeconds: 20
        timeoutSeconds: 600
        maxUnavailable: 1
        maxSurge: 1
    selector:
      cluster: "old"
    template:
      metadata:
        labels:
          cluster: "old"
      spec:
        containers:
        - args:
          - custom/transactions
          - -Djboss.default.jgroups.stack=kubernetes
          - --debug
          image: slaskawi/infinispan-server-snapshot-custom
          imagePullPolicy: Always
          name: infinispan-server
          ports:
          - containerPort: 8888
            protocol: TCP
          - containerPort: 11222
            protocol: TCP
          terminationMessagePath: /dev/termination-log
          terminationGracePeriodSeconds: 90
          volumeMounts:
          - mountPath: /opt/jboss/infinispan-server/standalone/configuration/custom
            name: config-volume
          livenessProbe:
            exec:
              command:
              - /usr/local/bin/is_running.sh
            initialDelaySeconds: 10
            timeoutSeconds: 80
            periodSeconds: 60
            successThreshold: 1
            failureThreshold: 5
          readinessProbe:
             exec:
                command:
                - /usr/local/bin/is_healthy.sh
             initialDelaySeconds: 10
             timeoutSeconds: 40
             periodSeconds: 30
             successThreshold: 2
             failureThreshold: 5
        restartPolicy: Always
        volumes:
        - configMap:
            name: transactions-configuration
          name: config-volume
    triggers:
    - type: ConfigChange
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      cluster: "old"
    name: "transactions-repository-remote-cache"
  spec:
    ports:
    - name: kube-ping
      port: 8888
      protocol: TCP
      targetPort: 8888
    - name: hotrod
      port: 11222
      protocol: TCP
      targetPort: 11222
    selector:
      cluster: "old"
    type: ClusterIP
- apiVersion: v1
  kind: Service
  metadata:
    name: "transactions-repository"
  spec:
    ports:
    - name: kube-ping
      port: 8888
      protocol: TCP
      targetPort: 8888
    - name: hotrod
      port: 11222
      protocol: TCP
      targetPort: 11222
    selector:
      cluster: "old"
    type: LoadBalancer
- apiVersion: v1
  kind: Service
  metadata:
    creationTimestamp: null
    labels:
      group: org.infinispan.microservices
      project: session-demo
      provider: fabric8
      version: 1.0.0-SNAPSHOT
    name: session-demo
  spec:
    ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      group: org.infinispan.microservices
      project: session-demo
      provider: fabric8
    sessionAffinity: None
    type: ClusterIP
- apiVersion: v1
  kind: Route
  metadata:
    labels:
      group: org.infinispan.microservices
      project: session-demo
      provider: fabric8
      version: 1.0.0-SNAPSHOT
    name: session-demo
  spec:
    host: session-demo-myproject.192.168.0.17.nip.io
    port:
      targetPort: 8080
    to:
      kind: Service
      name: session-demo
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: 2017-03-07T08:10:22Z
        status: "True"
        type: Admitted
      host: session-demo-myproject.192.168.0.17.nip.io
      routerName: router
      wildcardPolicy: None
